
icondir = $(datadir)/@PACKAGE@/icons/32

icon_DATA = document-clear.png document-clear.svg document-open.png document-open.svg loggers.png loggers.svg loggers-all.png loggers-all.svg loggers-current-only.png loggers-current-only.svg loggers-next.png loggers-next.svg loggers-no-current.png loggers-no-current.svg loggers-none.png loggers-none.svg loggers-previous.png loggers-previous.svg search.png search.svg time-frame.png time-frame.svg time-frame-begin.png time-frame-begin.svg time-frame-begin-reset.png time-frame-begin-reset.svg time-frame-end.png time-frame-end.svg time-frame-end-reset.png time-frame-end-reset.svg
