
icondir = $(datadir)/@PACKAGE@/icons/32x32/actions

icon_DATA = document-clear.png document-manage.png document-open.png document-reload.png loggers.png loggers-all.png loggers-current-only.png loggers-next.png loggers-no-current.png loggers-none.png loggers-previous.png search.png time-frame.png time-frame-begin.png time-frame-begin-reset.png time-frame-end.png time-frame-end-reset.png
